--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "backend",
+  "name": "common",
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "exports":{
+    "./types":"./index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
-  },
-  "dependencies": {
-    "@types/express": "^5.0.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.2"
   }
 }
