--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,8 +10,15 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "common": "*",
+    "cors": "^2.8.5",
+    "db": "*",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2"
   }
